--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -49,11 +49,44 @@ table {
 
 * {
     box-sizing: border-box;
+    border:1px blue solid;
 }
 
 html, body {
+    width:80%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+/* Header Styles */
+
+header{
+    width:800px;
+    margin:0 auto;
+    padding-bottom:2%;
+    display:flex;
+}
+
+header img{
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-end;
+}
+
+nav{
+    font-family: 'Rubik', sans-serif;
+    width:100%;
+    display:flex;
+    flex-flow:row wrap;
+    align-items:flex-end;
+    text-align:center;
+}
+
+nav a{
+    text-decoration:none;
+    color:black;
+    width:20%;
+
 }
 
 h1, h2, h3, h4, h5 {
@@ -61,6 +94,8 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
 }
+
+/* General Styles */
 
 p {
     line-height: 1.4;
