--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border:1px blue solid;
+    /* border:1px blue solid; */
 }
 
 html, body {
@@ -64,10 +64,12 @@ header{
     width:800px;
     margin:0 auto;
     padding-bottom:2%;
+    padding-top:2%;
     display:flex;
+
 }
 
-header img{
+.logo img{
     display:flex;
     flex-direction:column;
     justify-content:flex-end;
@@ -104,6 +106,12 @@ p {
 .container {
     width: 800px;
     margin: 0 auto;
+}
+
+.container .top-img img{
+    width:800px;
+    padding-top:2%;
+    padding-bottom:2%;
 }
 
 .top-content {
@@ -173,6 +181,7 @@ footer nav {
     align-items: center;
     padding: 20px 2%;
     font-size: 14px;
+    text-align:left;
 }
 
 footer nav a {
