--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	/* border: 0; */
+	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border:1px blue solid;
+    /* border:1px blue solid; */
 }
 
 html, body {
@@ -132,7 +132,6 @@ p {
 /* Middle Content */
 
 .middle-content {
-    border-bottom: 1px dashed black;
     margin:auto;
     display:flex;
     flex-flow:row wrap;
@@ -140,20 +139,25 @@ p {
 
 div.boxes{
     width:47%;
+    height:47%;
     margin:auto;
+    padding:0;
 }
 
 .middle-content h2 {
-    padding: 0 2%;
-    margin:3%;
+    margin-top:3%;
 }
 
 .middle-content .boxes {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     border-bottom: 1px dashed black;
-    padding:2%;
+    padding-bottom:2%;
+}
+
+div.office{
+    margin-top:7%;
 }
 
 .middle-content .boxes img{
@@ -163,6 +167,7 @@ div.boxes{
 
 .middle-content .boxes p{
     width:100%;
+    padding-bottom:1%;
 }
 
 .middle-content .boxes button{
@@ -170,19 +175,17 @@ div.boxes{
     font-family: 'Rubik', sans-serif;
     background-color:#fff;
     border:black 2px solid;
-    padding:2% 4%;
-    border-radius:10px;
+    padding:2%;
+    border-radius:7px;
+    width:30%;
 }
 
 .middle-content .middle-text-content{
     margin:0;
-}
-
-/* .middle-content .boxes .box{
-    width:24%;
     display:flex;
-
-} */
+    flex-flow:column wrap;
+    justify-content:flex-start;
+}
 
 /* Bottom Content */
 
