--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	/* border: 0; */
+	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border:1px blue solid;
+    /* border:1px blue solid; */
 }
 
 html, body {
