--- a/css/about.css
+++ b/css/about.css
@@ -210,9 +210,6 @@ footer {
 
 footer nav {
     width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px 2%;
     font-size: 14px;
     text-align:left;
@@ -221,4 +218,5 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    text-align:left;
 }
