--- a/css/index.css
+++ b/css/index.css
@@ -185,9 +185,6 @@ footer {
 
 footer nav {
     width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 20px 2%;
     font-size: 14px;
     text-align:left;
@@ -196,4 +193,5 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    text-align:left;
 }
