updated index to include color backgrounds to squares

--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,45 @@ p {
     align-items: center;
     justify-content: center;
 }
+.middle-content .boxes .one{
+    background:teal;
+}
+
+.middle-content .boxes .two{
+    background:gold;
+}
+
+.middle-content .boxes .three{
+    background:cadetblue;
+}
+
+.middle-content .boxes .four{
+    background:coral;
+}
+
+.middle-content .boxes .five{
+    background:crimson;
+}
+
+.middle-content .boxes .six{
+    background:forestgreen;
+}
+
+.middle-content .boxes .seven{
+    background:darkorchid;
+}
+
+.middle-content .boxes .eight{
+    background:hotpink;
+}
+
+.middle-content .boxes .nine{
+    background:indigo;
+}
+
+.middle-content .boxes .ten{
+    background:dodgerblue;
+}
 
 /* Bottom Content */
 
